attached_assets/Pasted--SO-Param-m5-objects-X86LocalApic-X86LocalApic-X86-para_1767427698780.txt
[SO Param] m5.objects.X86LocalApic, X86LocalApic -> X86/params/X86LocalApic.hh
 [SO Param] m5.objects.I82094AA, I82094AA -> X86/params/I82094AA.hh
 [SO Param] m5.objects.Pc, Pc -> X86/params/Pc.hh
 [SO Param] m5.objects.SouthBridge, SouthBridge -> X86/params/SouthBridge.hh
 [SO Param] m5.objects.Device, BasicPioDevice -> X86/params/BasicPioDevice.hh                                    [SO Param] m5.objects.Device, PioDevice -> X86/params/PioDevice.hh
 [SO Param] m5.objects.Platform, Platform -> X86/params/Platform.hh
 [SO Param] m5.objects.Cmos, Cmos -> X86/params/Cmos.hh
 [SO Param] m5.objects.I8042, I8042 -> X86/params/I8042.hh
 [SO Param] m5.objects.I8237, I8237 -> X86/params/I8237.hh                                                       [SO Param] m5.objects.I8254, I8254 -> X86/params/I8254.hh
 [SO Param] m5.objects.I8259, I8259 -> X86/params/I8259.hh
 [SO Param] m5.objects.PcSpeaker, PcSpeaker -> X86/params/PcSpeaker.hh                                           [SO Param] m5.objects.PS2, PS2Device -> X86/params/PS2Device.hh
 [ENUMDECL] m5.objects.I8259, X86I8259CascadeMode -> X86/enums/X86I8259CascadeMode.hh
 [     CXX] src/arch/x86/interrupts.cc -> X86/arch/x86/interrupts.o                                              [     CXX] src/arch/x86/isa.cc -> X86/arch/x86/isa.o
 [ TRACING]  -> X86/debug/ExecRegDelta.hh
 [SO Param] m5.objects.X86NativeTrace, X86NativeTrace -> X86/params/X86NativeTrace.hh
 [ TRACING]  -> X86/debug/ExecEnable.hh
 [SO Param] m5.objects.CPUTracers, ExeTracer -> X86/params/ExeTracer.hh
 [SO Param] m5.objects.CPUTracers, NativeTrace -> X86/params/NativeTrace.hh                                      [     CXX] src/arch/x86/nativetrace.cc -> X86/arch/x86/nativetrace.o
 [     CXX] src/arch/x86/pagetable.cc -> X86/arch/x86/pagetable.o
 [     CXX] src/arch/x86/pagetable_walker.cc -> X86/arch/x86/pagetable_walker.o                                  [ TRACING]  -> X86/debug/Stack.hh
 [SO Param] m5.objects.Process, Process -> X86/params/Process.hh                                                 [ TRACING]  -> X86/debug/MMU.hh
 [SO Param] m5.objects.Workload, SEWorkload -> X86/params/SEWorkload.hh
 [SO Param] m5.objects.Process, EmulatedDriver -> X86/params/EmulatedDriver.hh                                   [     CXX] src/arch/x86/process.cc -> X86/arch/x86/process.o
 [ TRACING]  -> X86/debug/GDBAcc.hh                      [     CXX] src/arch/x86/remote_gdb.cc -> X86/arch/x86/remote_gdb.o
 [ TRACING]  -> X86/debug/PseudoInst.hh                  [     CXX] src/arch/x86/tlb.cc -> X86/arch/x86/tlb.o
 [     CXX] src/arch/x86/types.cc -> X86/arch/x86/types.o                                                        [     CXX] src/arch/x86/utility.cc -> X86/arch/x86/utility.o
 [     CXX] X86/arch/x86/X86SeWorkload.py.cc -> .o       [SO Param] m5.objects.X86SeWorkload, X86EmuLinux -> X86/python/_m5/param_X86EmuLinux.cc
 [SO Param] m5.objects.X86SeWorkload, X86EmuLinux -> X86/params/X86EmuLinux.hh
 [     CXX] X86/python/_m5/param_X86EmuLinux.cc -> .o
In file included from build/X86/python/_m5/param_X86EmuLinux.cc:17:
In file included from src/arch/x86/linux/se_workload.hh:42:                                                     In file included from src/arch/x86/linux/linux.hh:49:
src/kern/linux/linux.hh:116:25: error:
      expected ';' at end of declaration list             116 |         uint64_t        st_atime_nsec;
      |                         ^
/data/data/com.termux/files/usr/bin/../../usr/include/sys/stat.h:123:30: note:
      expanded from macro 'st_atime_nsec'
  123 | #define st_atime_nsec st_atim.tv_nsec                 |                              ^
In file included from build/X86/python/_m5/param_X86EmuLinux.cc:17:                                             In file included from src/arch/x86/linux/se_workload.hh:42:
In file included from src/arch/x86/linux/linux.hh:49:   src/kern/linux/linux.hh:118:25: error:
      expected ';' at end of declaration list
  118 |         uint64_t        st_mtime_nsec;
      |                         ^
/data/data/com.termux/files/usr/bin/../../usr/include/sys/stat.h:124:30: note:
      expanded from macro 'st_mtime_nsec'
  124 | #define st_mtime_nsec st_mtim.tv_nsec                 |                              ^
In file included from build/X86/python/_m5/param_X86EmuLinux.cc:17:                                             In file included from src/arch/x86/linux/se_workload.hh:42:
In file included from src/arch/x86/linux/linux.hh:49:   src/kern/linux/linux.hh:120:25: error:
      expected ';' at end of declaration list
  120 |         uint64_t        st_ctime_nsec;                |                         ^
/data/data/com.termux/files/usr/bin/../../usr/include/sys/stat.h:125:30: note:                                        expanded from macro 'st_ctime_nsec'
  125 | #define st_ctime_nsec st_ctim.tv_nsec
      |                              ^                  In file included from build/X86/python/_m5/param_X86EmuLinux.cc:17:
In file included from src/arch/x86/linux/se_workload.hh:42:
src/arch/x86/linux/linux.hh:115:18: error:
      expected ';' at end of declaration list             115 |         uint64_t st_atime_nsec;
      |                  ^                              /data/data/com.termux/files/usr/bin/../../usr/include/sys/stat.h:123:30: note:                                        expanded from macro 'st_atime_nsec'
  123 | #define st_atime_nsec st_atim.tv_nsec                 |                              ^
In file included from build/X86/python/_m5/param_X86EmuLinux.cc:17:
In file included from src/arch/x86/linux/se_workload.hh:42:
src/arch/x86/linux/linux.hh:117:18: error:                    expected ';' at end of declaration list
  117 |         uint64_t st_mtime_nsec;
      |                  ^                              /data/data/com.termux/files/usr/bin/../../usr/include/sys/stat.h:124:30: note:
      expanded from macro 'st_mtime_nsec'                 124 | #define st_mtime_nsec st_mtim.tv_nsec
      |                              ^                  In file included from build/X86/python/_m5/param_X86EmuLinux.cc:17:                                             In file included from src/arch/x86/linux/se_workload.hh:42:
src/arch/x86/linux/linux.hh:119:18: error:                    expected ';' at end of declaration list
  119 |         uint64_t st_ctime_nsec;
      |                  ^                              /data/data/com.termux/files/usr/bin/../../usr/include/sys/stat.h:125:30: note:                                        expanded from macro 'st_ctime_nsec'
  125 | #define st_ctime_nsec st_ctim.tv_nsec                 |                              ^                  In file included from build/X86/python/_m5/param_X86EmuLinux.cc:17:                                             In file included from src/arch/x86/linux/se_workload.hh:42:                                                     src/arch/x86/linux/linux.hh:323:18: error:                    expected ';' at end of declaration list
  323 |         uint32_t st_atime_nsec;                       |                  ^
/data/data/com.termux/files/usr/bin/../../usr/include/sys/stat.h:123:30: note:
      expanded from macro 'st_atime_nsec'                 123 | #define st_atime_nsec st_atim.tv_nsec
      |                              ^                  In file included from build/X86/python/_m5/param_X86EmuLinux.cc:17:                                             In file included from src/arch/x86/linux/se_workload.hh:42:                                                     src/arch/x86/linux/linux.hh:325:18: error:
      expected ';' at end of declaration list             325 |         uint32_t st_mtime_nsec;
      |                  ^                              /data/data/com.termux/files/usr/bin/../../usr/include/sys/stat.h:124:30: note:                                        expanded from macro 'st_mtime_nsec'
  124 | #define st_mtime_nsec st_mtim.tv_nsec                 |                              ^
In file included from build/X86/python/_m5/param_X86EmuLinux.cc:17:
In file included from src/arch/x86/linux/se_workload.hh:42:
src/arch/x86/linux/linux.hh:327:18: error:                    expected ';' at end of declaration list
  327 |         uint32_t st_ctime_nsec;                       |                  ^
/data/data/com.termux/files/usr/bin/../../usr/include/sys/stat.h:125:30: note:
      expanded from macro 'st_ctime_nsec'                 125 | #define st_ctime_nsec st_ctim.tv_nsec
      |                              ^
9 errors generated.
scons: *** [build/X86/python/_m5/param_X86EmuLinux.o] Error 1                                                   scons: building terminated because of errors.
*** Summary of Warnings ***
Warning: Detected Clang version 21.1.8 is not officially         supported.
         gem5 supports Clang v14 up to v19.
Warning: You can get a 12% performance improvement by
         installing tcmalloc (libgoogle-perftools-dev
         package on Ubuntu or RedHat).                  Warning: Couldn't find HDF5 C++ libraries. Disabling
         HDF5 support.
Warning: Header file <capstone/capstone.h> not found.            This host has no capstone library installed.
Warning: Can't find library for sys/mman.
Warning: No suitable back trace implementation found.